2010-06-18  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSAttributedString.m
	(-initWithData:options:documentAttributes:error:): Attempt to auto
	detect the document type if it wasn't specified by the caller.
	Currently works for RTF and HTML documents.

	* Source/NSAttributedString.m (-initWithURL:documentAttributes:,
	-initWithURL:options:documentAttributes:error:): Add base URL to
	the document importing options only if it is not nil.

2010-06-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSMenu.m (-performKeyEquivalent:): Fix Doug's previous
	change to ignore the shift key except when a function key is
	pressed, as documented by Apple.
	* Source/NSButton.m (-performKeyEquivalent): Fix to trigger only
	when command, alternate, and control keys match the modifier mask
	exactly, as documented by Apple.

2010-06-08 Doug Simons <doug.simons@testplant.com>

	* Source/NSMenu.m:
	Fix menu key equivalents to only trigger when the exact modifiers
	are held down. Previously, an item would activate even when additional
	modifiers were held down (e.g. typing Ctrl-Alt-x would activate a
	menu item whose key equivalent was Ctrl-x).

2010-06-07 Doug Simons <doug.simons@testplant.com>

	* Source/NSMenuItem.m:
	Implement NSUserKeyEquivalents default for providing custom key
	equivalents for menu items based on their title.

2010-06-05  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Source/GSWindowDecorationView.m ([-removeSubview:]): Uncommented
	the method, fixing moving the content view from one window to
	another one.

2010-06-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSApplication.m (-finishLaunching): Do not attempt to
	open an	untitled document in a document based application that
	does not define an editor type.

2010-06-01  Quentin Mathe <quentin.mathe@gmail.com>

	Fixed many drawing issues (many ones being related to the flipping).
	In particular, fixed -[NSImage drawXXX] methods to work exactly as 